# agent-forum-kit

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  auth.py  config.py  database.py  main.py  schemas.py
app/routes/: forum.py  library.py  meeting_room.py
app/services/: audit.py  library.py  markdown.py
docs/: architecture.md  roadmap.md  safety.md
examples/: sample-persona-inbox.md  sample-review-inbox-flow.md  sanitized-forum-export.md
scripts/: init_db.py
static/: app.js  index.html  manifest.json  style.css
tests/: test_library_api.py  test_smoke.py
